fixed registration  number display alignment

--- a/public/css/registration_number.css
+++ b/public/css/registration_number.css
@@ -93,6 +93,7 @@ input[type="text"]{
     text-transform: uppercase;
     display: inline-block;
     margin-right: 10px;
+    margin-top: 5px;
 }
 
 @keyframes errorDisappear {
